--- a/SQL_interpret/Makefile
+++ b/SQL_interpret/Makefile
@@ -8,9 +8,11 @@ all: sql_main test_lexeme test_syntaxique
 %: %.o
 	$(CC) $^ -o $@
 
-table_donnes.o: type_table_donnes.h
+table_donnes.o: type_table_donnes.h table_affectation.h
 
 test_lexeme.o: analyse_lexicale.h
+
+table_affectation.o: type_table_donnes.h
 
 test_syntaxique.o: analyse_lexicale.h analyse_syntaxique.h
 
@@ -18,15 +20,15 @@ analyse_lexicale.o: lecture_caracteres.h
 
 lecture_caracteres.o: lecture_caracteres.h
 
-analyse_syntaxique.o: analyse_lexicale.h
+analyse_syntaxique.o: analyse_lexicale.h table_affectation.h
 
-sql_main.o: table_donnes.h
+sql_main.o: table_donnes.h table_affectation.h
 
 test_lexeme: analyse_lexicale.o lecture_caracteres.o
 
-sql_main: table_donnes.o 
+sql_main: table_donnes.o table_affectation.o
 
-test_syntaxique: analyse_lexicale.o analyse_syntaxique.o lecture_caracteres.o
+test_syntaxique: analyse_lexicale.o analyse_syntaxique.o table_affectation.o lecture_caracteres.o 
 
 
 
